2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Fix subdir handling.  Now finally, "make distcheck" will
	include the documentation into the tarball even if the configure had been
	run without the --enable-doc.

2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>

	* safemode.c: Obtain progname from avrdude.h rather than trying to roll our
	own (duplicate) copy of it.
	* avr910.c: Constify char pointers.
	* avrpart.c: (Ditto.)
	* avrpart.h: (Ditto.)
	* butterfly.c: (Ditto.)
	* config.c: (Ditto.)
	* config.h: (Ditto.)
	* jtagmkI.c: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* par.c: (Ditto.)
	* pgm.c: (Ditto.)
	* pgm.h: (Ditto.)
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* stk500.c: (Ditto.)
	* stk500v2.c: (Ditto.)
	* usbasp.c: (Ditto.)

2007-01-29 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrpart.c: More backend/library abstraction and generalization:
	turn the list_parts() and list_programmers() functions into
	general list iteration functions that call a caller-supplied
	callback for each element.  Implement list_parts() and
	list_programmers() as private functions in main.c based on that
	approach.
	* avrpart.h: (Ditto.)
	* main.c: (Ditto.)
	* pgm.c: (Ditto.)
	* pgm.h: (Ditto.)

2007-01-25 Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am: Rearrange everything so it is now built into a
	libavrdude.a library, and link main.c against that library.
	* configure.ac: Add AC_PROG_RANLIB as we are building a library
	now.

2007-01-24 Joerg Wunsch <j@uriah.heep.sax.de>

	Major code cleanup.
	- Make all internal functions "static".
	- Make sure each module's header and implementation file match.
	- Remove all library-like functionality from main.c, so only
	  the actual frontend remains in main.c.
	- Add C++ brackets to all header files.
	* avr.c: (Ditto.)
	* avr.h: (Ditto.)
	* avr910.c: (Ditto.)
	* avr910.h: (Ditto.)
	* avrdude.h: (Ditto.)
	* avrpart.c: (Ditto.)
	* avrpart.h: (Ditto.)
	* bitbang.h: (Ditto.)
	* butterfly.h: (Ditto.)
	* config.c: (Ditto.)